# evolutionary-tsp

./: Setup.lhs  build.sh  evolutionary-tsp.cabal
res/: ulysses16.xml  ulysses22.xml
src/: Main.hs
src/Evolutionary/: Algorithm.hs  Data.hs  Graphviz.hs  Parser.hs
