Name:           evolutionary-tsp
Version:        0.0
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable tsp
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Extensions:
    DeriveDataTypeable
  Other-Modules:
    Evolutionary.Parser,
    Evolutionary.Data,
    Evolutionary.Algorithm,
    Evolutionary.Graphviz
  Build-Depends:
    base >= 4 && < 5,
    containers >= 0.4,
    HaXml >= 1.20,
    random >= 1.0.0.2,
    cmdargs >= 0.8
